Fixing the snake buttons not appear on mobile version

--- a/snake/snake.css
+++ b/snake/snake.css
@@ -62,13 +62,13 @@ body {
  }
  
  #mobileControls {
-  display: none;
+  display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 0px;
- }
- 
- #mobileControls button {
+  margin-top: 20px;
+}
+
+#mobileControls button {
   background-color: #000;
   color: #fff;
   border: 2px solid #fff;
@@ -78,12 +78,12 @@ body {
   cursor: pointer;
   border-radius: 10px;
   transition: background-color 0.3s, color 0.3s;
- }
- 
- #mobileControls button:active {
+}
+
+#mobileControls button:active {
   background-color: #fff;
   color: #000;
- }
+}
  
  #mobileControls div {
   display: flex;
